--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@visx/mock-data": "^1.0.0",
     "@visx/scale": "^1.3.0",
     "@visx/shape": "^1.3.0",
+    "bootstrap": "^4.5.3",
     "eventemitter2": "^4.1.2",
     "lodash": "^4.17.20",
     "plotly.js-dist": "^1.58.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.1",
